# medical-bills-organiser

./: .env.example  .gitignore  QUICKSTART.md  README.md  pyproject.toml  setup.sh
src/medical_file_sorter/: content_extractor.py  image_processor.py  llm_sorter.py  main.py  ocr_factory.py  paddle_ocr_extractor.py  paddle_ocr_playground.py
